Update `type` to `commonjs`

--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "@devdesigner/helper-modules",
-  "version": "1.0.0",
+  "name": "@thedevdesigner/helper-modules",
+  "version": "1.0.1",
+  "private": false,
   "description": "Collection of commonly used helper modules written in TypeScript",
   "main": "./dist/index.js",
-  "type": "module",
+  "type": "commonjs",
   "typings": "./dist/@types",
   "files": [
     "dist",
@@ -13,7 +14,11 @@
   "scripts": {
     "pre-compile": "rm -rf ./dist",
     "compile": "npx tsc",
-    "build": "npm run pre-compile && npm run compile"
+    "update_version:major": "npm version major",
+    "update_version:minor": "npm version minor",
+    "update_version:patch": "npm version patch",
+    "build": "npm run pre-compile && npm run compile",
+    "publish_package": "npm publish --access=public"
   },
   "author": "Aakash Jha <thedevdesigner@gmail.com> (https://www.thedevdesigner.com/)",
   "license": "MIT",
