--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@thedevdesigner/helper-modules",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "private": false,
   "description": "Collection of commonly used helper modules written in TypeScript",
   "main": "./dist/index.js",
@@ -18,12 +18,39 @@
     "update_version:minor": "npm version minor",
     "update_version:patch": "npm version patch",
     "build": "npm run pre-compile && npm run compile",
-    "publish_package": "npm publish --access=public"
+    "publish_package": "npm publish --access=public",
+    "test": "jest --detectOpenHandles"
   },
   "author": "Aakash Jha <thedevdesigner@gmail.com> (https://www.thedevdesigner.com/)",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/the-devdesigner/helper-modules"
+  },
+  "bugs": {
+    "url": "https://github.com/the-devdesigner/helper-modules/issues"
+  },
+  "keywords": [
+    "nodejs",
+    "typescript",
+    "jest",
+    "helper-functions"
+  ],
+  "readme": "./README.md",
   "license": "MIT",
   "devDependencies": {
+    "@babel/preset-env": "^7.19.4",
+    "@babel/preset-typescript": "^7.18.6",
+    "@types/dotenv": "^8.2.0",
+    "@types/jest": "^29.2.0",
     "@types/node": "^18.11.7",
+    "@types/supertest": "^2.0.12",
+    "jest": "^29.2.2",
+    "supertest": "^6.3.1",
+    "ts-jest": "^29.0.3",
+    "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
+  },
+  "peerDependencies": {
+    "dotenv": "^16.0.3"
   }
 }
