--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,5 @@
 		"declarationDir": "./dist/@types"
 	},
 	"include": ["./src"],
-	"exclude": ["node_modules"]
+	"exclude": ["node_modules", "./src/tests/**"]
 }
-
