added step to use env secrets

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,24 +1,27 @@
 name: Build
 on:
-  push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
+    push:
+        branches: ["master"]
+    pull_request:
+        branches: ["master"]
+env:
+    ENCRYPTION_DECRYPTION_KEY: ${{secrets.ENCRYPTION_DECRYPTION_KEY}}
+    ENCRYPTION_DECRYPTION_ALGORITHM: ${{secrets.ENCRYPTION_DECRYPTION_ALGORITHM}}
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [17.x]
-    steps:
-    - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-    - name: Create Build 📦
-      run: |
-        npm install --legacy-peer-deps
-        npm run build
-    - name: Run Test ⚙️
-      run: npm run test
+    build:
+        runs-on: ubuntu-latest
+        strategy:
+            matrix:
+                node-version: [17.x]
+        steps:
+            - uses: actions/checkout@v3
+            - name: Use Node.js ${{ matrix.node-version }}
+              uses: actions/setup-node@v3
+              with:
+                  node-version: ${{ matrix.node-version }}
+            - name: Create Build 📦
+              run: |
+                  npm install --legacy-peer-deps
+                  npm run build
+            - name: Run Test ⚙️
+              run: npm run test
