--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "jest": "^29.2.2",
     "supertest": "^6.3.1",
     "ts-jest": "^29.0.3",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
   },
   "peerDependencies": {
     "dotenv": "^16.0.3",
