--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "README.md",
     "package.json"
   ],
+  "engines": {
+    "node": ">=14"
+  },
   "scripts": {
     "pre-compile": "rm -rf ./dist",
     "compile": "npx tsc",
@@ -40,8 +43,9 @@
   "devDependencies": {
     "@babel/preset-env": "^7.19.4",
     "@babel/preset-typescript": "^7.18.6",
-    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.14",
     "@types/jest": "^29.2.0",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.11.7",
     "@types/supertest": "^2.0.12",
     "jest": "^29.2.2",
@@ -52,6 +56,8 @@
   },
   "peerDependencies": {
     "dotenv": "^16.0.3",
-    "typescript": "^4.8.4"
+    "express": "^4.18.2",
+    "typescript": "^4.8.4",
+    "jsonwebtoken": "^8.5.1"
   }
 }
